--- a/sass/abstracts/_variables.sass
+++ b/sass/abstracts/_variables.sass
@@ -1,6 +1,14 @@
+// COLORS
+
 $color-primary: #7ed56f
 $color-primary-light: #55c57a
 $color-primary-dark: #28b485
 $color-gray-dark: #777
 $color-white: #fff
 $color-black: #000
+
+// GRID
+
+$grid-width: 114rem
+$gutter-horizontal: 6rem
+$gutter-vertical: 8rem
