--- a/sass/components/_button.sass
+++ b/sass/components/_button.sass
@@ -1,5 +1,5 @@
 .btn
-  &:link, &:visited
+  &, &:link, &:visited
     text-transform: uppercase
     text-decoration: none
     padding: 1.5rem 4rem
@@ -8,6 +8,9 @@
     transition: all .2s
     position: relative
     font-size: $default-font-size
+    //Changes for the <button> element
+    border: none
+    cursor: pointer
 
   &:hover
     transform: translateY(-.3rem)
@@ -17,7 +20,8 @@
       transform: scaleX(1.4) scaleY(1.6)
       opacity: 0
 
-  &:active
+  &:active, &:focus
+  outline: none
     transform: translateY(-.1rem)
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2)
 
@@ -35,7 +39,7 @@
 
   &--white
     background-color: $color-white
-    color: $color-gray-dark
+    color: $color-gray-dark-1
 
     &::after
       background-color: $color-white
