--- a/sass/abstracts/_mixins.sass
+++ b/sass/abstracts/_mixins.sass
@@ -9,3 +9,31 @@
   top: 50%
   left: 50%
   transform: translate(-50%, -50%)
+
+// Media Query Manager
+// 1em = 16px
+// 0-600px: Phone 37.5em
+// 600-900px: Tablet portrait 56.25em
+// 900-1200px: Table landscape 75em
+// 1200-1800px: Normal styles
+// 1800px+: Big desktop 112.5em
+
+// $breakpoint argument:
+// - phone
+// - tab-port
+// - tab-land
+// - big-desk
+
+@mixin respond($breakpoint)
+  @if $breakpoint == phone
+    @media (max-width: 37.5em)
+      @content
+  @if $breakpoint == tab-port
+    @media (max-width: 56.25em)
+      @content
+  @if $breakpoint == tab-land
+    @media (max-width: 75em)
+      @content
+  @if $breakpoint == big-desk
+    @media (min-width: 112.5em)
+      @content
