--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -9,5 +9,19 @@ html
   // 1 rem = 10px; from 16px = 100%
   font-size: 62.5%
 
+  // 1rem = 9px, 9/16 = 56.25%
+  // order: width < 900px?
+  @include respond(tab-land)
+    font-size: 56.25%
+
+  // 1rem = 8px, 8/16 = 50%
+  // order: width < 600px?
+  @include respond(tab-port)
+    font-size: 50%
+
+  // 1rem = 12px, 12/16 = 75%
+  @include respond(big-desk)
+    font-size: 75%
+
 body
   box-sizing: border-box
