--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -4,7 +4,6 @@ body
   font-size: 1.6rem
   line-height: 1.7
   color: $color-gray-dark-1
-  padding: 3rem
 
 .heading-primary
   color: $color-white
@@ -21,12 +20,19 @@ body
     animation-duration: 1s
     animation-timing-function: ease-out
 
+    @include respond(phone)
+      letter-spacing: 1rem
+      font-family: 5rem
+
   &--sub
     display: block
     font-size: 2rem
     font-weight: 700
     letter-spacing: 1.74rem
     animation: moveInRight 1s ease-out
+
+    @include respond(phone)
+      letter-spacing: .5rem
 
 .heading-secondary
   font-size: 3.5rem
@@ -38,6 +44,12 @@ body
   color: transparent
   letter-spacing: .2rem
   transition: all .2s
+
+  @include respond(tab-port)
+    font-size: 3
+
+  @include respond(phone)
+    font-size: 2.5
 
   &:hover
     transform: skewX(15deg) skewY(2deg) scale(1.1)
