--- a/sass/layout/_footer.sass
+++ b/sass/layout/_footer.sass
@@ -4,15 +4,25 @@
   font-size: 1.4rem
   color: $color-gray-light-1
 
+  @include respond(tab-port)
+    padding: 8rem 0
+
   &__copyright
     border-top: 1px solid $color-gray-dark-1
     padding-top: 2rem
     width: 80%
     float: right
 
+    @include respond(tab-port)
+      width: 100%
+      float: none
+
   &__logo-box
     text-align: center
     margin-bottom: 8rem
+
+    @include respond(tab-port)
+      margin-bottom: 6rem
 
   &__logo
     width: 15rem
@@ -22,6 +32,10 @@
     border-top: 1px solid $color-gray-dark-1
     padding-top: 2rem
     display: inline-block
+
+    @include respond(tab-port)
+      width: 100%
+      text-align: center
 
   &__list
     list-style: none
