--- a/sass/components/story.sass
+++ b/sass/components/story.sass
@@ -21,12 +21,17 @@
     width: 15rem
     height: 15rem
     float: left
-    -webkit-shape-outside: circle(50% at 50% 50%)
-    shape-outside: circle(50% at 50% 50%)
-    -webkit-clip-path: circle(50% at 50% 50%)
-    clip-path: circle(50% at 50% 50%)
     transform: translateX(-3rem) skewX(12deg)
     position: relative
+    overflow: hidden
+    border-radius: 50%
+
+    @support (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0))
+      -webkit-clip-path: circle(50% at 50% 50%)
+      clip-path: circle(50% at 50% 50%)
+      -webkit-shape-outside: circle(50% at 50% 50%)
+      shape-outside: circle(50% at 50% 50%)
+      border-radius: none
 
     @include respond(phone)
       transform: translateX(-3rem) skewX(0)
@@ -35,6 +40,7 @@
     height: 100%
     transform: translateX(-4rem) scale(1.4)
     transition: all .5s
+    -webkit-backface-visibility: hidden
     backface-visibility: hidden
 
   &__text
@@ -54,6 +60,7 @@
     text-align: center
     opacity: 0
     transition: all .5s
+    -webkit-backface-visibility: hidden
     backface-visibility: hidden
 
   &:hover &__caption
